Fix alignment issue of cards header row: now algined based on baseline.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -321,7 +321,7 @@ footer {
 .card-header {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: baseline;
   gap: 16px;
   flex-wrap: nowrap;
 }
